--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,8 +1,7 @@
 .bg-login-image{
-    background: url("../img/bg-login.jpg");
-    background-position: center;
+    background: url("../img/bg-login.jpg") center;
     background-size: cover;
-    border: 0px;
+    border: 0;
 }
 
 .sizeDiv{
